[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Frame.png" type="Texture" id=1]
[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Botao.png" type="Texture" id=3]
[ext_resource path="res://Sprites/NPC's/OlhoParadoInRange.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Manual.gd" type="Script" id=5]
[ext_resource path="res://Sprites/D.png" type="Texture" id=6]
[ext_resource path="res://Sprites/A.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="Manual" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 181 )
texture = ExtResource( 1 )

[node name="SectionTitle" type="RichTextLabel" parent="."]
margin_left = 169.0
margin_top = 67.0
margin_right = 260.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( -189, -79 )
custom_colors/default_color = Color( 1, 0.607843, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Manual do jogador"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionDescription" type="RichTextLabel" parent="."]
margin_left = 170.0
margin_top = 99.0
margin_right = 476.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 110, 62 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Definem-se abaixo as principais mecânicas disponíveis no jogo."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E_key_description" type="RichTextLabel" parent="."]
margin_left = 203.0
margin_top = 131.0
margin_right = 475.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( -512, -88 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Interage com os agentes do jogo (entra em elevadores, abre tarefas, conversa com outros personagens...)"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Sprite" parent="."]
position = Vector2( -309, 43 )
scale = Vector2( 2.5625, 2.5625 )
texture = ExtResource( 3 )
offset = Vector2( 192.39, 38.6341 )
hframes = 2

[node name="D_key_description" type="RichTextLabel" parent="."]
margin_left = 203.0
margin_top = 176.0
margin_right = 475.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( -512, -88 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Move o personagem para a direita"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Sprite" parent="."]
position = Vector2( 184, 180 )
scale = Vector2( 1.316, 1.316 )
texture = ExtResource( 6 )
hframes = 2

[node name="A_key_description" type="RichTextLabel" parent="."]
margin_left = 203.062
margin_top = 214.062
margin_right = 475.062
margin_bottom = 227.062
rect_pivot_offset = Vector2( 151.938, -0.0624695 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Move o personagem para a esquerda"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Sprite" parent="."]
position = Vector2( 184.062, 218.063 )
scale = Vector2( 1.316, 1.316 )
texture = ExtResource( 7 )
hframes = 2

[node name="NPC_description" type="RichTextLabel" parent="."]
margin_left = 203.0
margin_top = 257.0
margin_right = 475.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 151.938, -0.0624695 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "NPC instrutor"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC" type="Sprite" parent="."]
position = Vector2( 183, 262 )
scale = Vector2( 1.45833, 1.45833 )
texture = ExtResource( 4 )
hframes = 14

[node name="CloseBtn" type="Button" parent="."]
show_behind_parent = true
margin_left = 448.0
margin_top = 61.0
margin_right = 475.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CloseBtn" to="." method="_on_CloseBtn_pressed"]
